--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,3 +7,9 @@
     width: 100px;
       border-radius: 20px;
   }
+  .loginBlock{
+    float: right;
+  }
+  .loginBlock a {
+    color: wheat;
+  }
